--- a/categories.html
+++ b/categories.html
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-5 py-3 fixed-top navbar-animate">
     <a href="index.html" class="navbar-brand p-0">
       <h1 class="m-0 logo-animate">
-        <img src="img/logon.png" style="width: 94px;"> B T C
+        <img src="img/logoo.png" style="width: 150px; height:150px;"> B T C
       </h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
