--- a/mofsalat.html
+++ b/mofsalat.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-5 py-3 fixed-top navbar-animate">
     <a href="index.html" class="navbar-brand p-0">
       <h1 class="m-0 logo-animate">
-        <img src="img/logon.png" style="width: 94px;"> B T C
+        <img src="img/logoo.png" style="width: 150px; height:150px;"> B T C
       </h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -89,6 +89,8 @@
                 <div class="card-body text-center">
                     <h5 class="card-title"> مفصلات</h5>
                      <p class="card-text"> HG102A </p>
+                     <p class="card-text"> HG102B</p>
+                     <p class="card-text"> HG102C </p>
                 </div>
             </div>
         </div>
@@ -99,28 +101,6 @@
                 <div class="card-body text-center">
                     <h5 class="card-title"> مفصلات</h5>
                      <p class="card-text"> HG102AG </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4">
-            <div class="card h-100">
-                <img src="img/مفصلات/HG102B n.png" class="card-img-top" alt="المفصلات">
-                <div class="card-body text-center">
-                    <h5 class="card-title"> مفصلات</h5>
-                     <p class="card-text"> HG102B </p>
-                </div>
-            </div>
-        </div>
-
-        <!-- الصف الثاني -->
-
-         <div class="col-md-4">
-            <div class="card h-100">
-                <img src="img/مفصلات/HG102C n.png" class="card-img-top" alt="المفصلات">
-                <div class="card-body text-center">
-                    <h5 class="card-title"> مفصلات</h5>
-                     <p class="card-text"> HG102C </p>
                 </div>
             </div>
         </div>
