--- a/sahab.html
+++ b/sahab.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-5 py-3 fixed-top navbar-animate">
     <a href="index.html" class="navbar-brand p-0">
       <h1 class="m-0 logo-animate">
-        <img src="img/logon.png" style="width: 94px;"> B T C
+        <img src="img/logoo.png" style="width: 150px; height:150px;"> B T C
       </h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -87,9 +87,11 @@
           <img src="img/سحابات/sahab1 n.png" class="card-img-top" alt="السحابات">
           <div class="card-body text-center">
             <h5 class="card-title">سحابات أدراج</h5>
-            <p class="card-text mb-2">عادية</p>
+            <p class="card-text mb-2">رومان</p>
             <h6 class="text-gold fw-bold mb-2">المقاسات المتاحة:</h6>
             <ul class="list-unstyled available-sizes">
+              <li>20 سم</li>
+              <li>25 سم</li>
               <li>30 سم</li>
               <li>35 سم</li>
               <li>40 سم</li>
@@ -108,9 +110,11 @@
     <img src="img/سحابات/sahab2 n.png" class="card-img-top" alt="السحابات">
     <div class="card-body text-center">
       <h5 class="card-title">سحابات أدراج</h5>
-      <p class="card-text mb-2">رومان</p>
+      <p class="card-text mb-2">عادية</p>
       <h6 class="text-gold fw-bold mb-2">المقاسات المتاحة:</h6>
       <ul class="list-unstyled available-sizes">
+              <li>20 سم</li>
+              <li>25 سم</li>
              <li>30 سم</li>
               <li>35 سم</li>
               <li>40 سم</li>
