--- a/zawya.html
+++ b/zawya.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-5 py-3 fixed-top navbar-animate">
     <a href="index.html" class="navbar-brand p-0">
       <h1 class="m-0 logo-animate">
-        <img src="img/logon.png" style="width: 94px;"> B T C
+        <img src="img/logoo.png" style="width: 150px; height:150px;"> B T C
       </h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -97,6 +97,13 @@
           <img src="img/زاوية/زاويه ج.png" class="card-img-top" alt="الزاويه">
           <div class="card-body text-center">
             <h5 class="card-title"> زاوية </h5>
+            <h6 class="text-gold fw-bold mb-2">المقاسات المتاحة:</h6>
+            <ul class="list-unstyled available-sizes">
+              <li>30*30 </li>
+              <li>40*40</li>
+              <li>50*50</li>
+            </ul>
+
           </div>
         </div>
       </div>
@@ -105,8 +112,7 @@
         <div class="card h-100">
           <img src="img/زاوية/سقاط دولاب ج.png" class="card-img-top" alt="الزاويه">
           <div class="card-body text-center">
-            <h5 class="card-title"> زاوية </h5>
-            <p class="card-text mb-2"> سقاط دولاب</p>
+            <h5 class="card-title"> سقاط دولاب </h5>
           </div>
         </div>
       </div>
